--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
-asgiref @ file:///tmp/build/80754af9/asgiref_1602513567813/work
+asgiref
 certifi==2020.6.20
 click==7.1.2
-Django @ file:///tmp/build/80754af9/django_1601563330930/work
+Django
 gunicorn==20.0.4
-joblib @ file:///tmp/build/80754af9/joblib_1601912903842/work
+joblib
 mkl-fft==1.2.0
 mkl-random==1.1.1
 mkl-service==2.3.0
-nltk @ file:///tmp/build/80754af9/nltk_1592496090529/work
-numpy @ file:///C:/ci/numpy_and_numpy_base_1596215850360/work
-pandas @ file:///C:/ci/pandas_1602083338010/work
-psycopg2 @ file:///C:/ci/psycopg2_1594305172475/work
+nltk
+numpy
+pandas
+psycopg2
 python-dateutil==2.8.1
 pytz==2020.1
-regex @ file:///C:/ci/regex_1602770567298/work
-scikit-learn @ file:///C:/ci/scikit-learn_1598377018496/work
+regex
+scikit-learn
 scikit-surprise==1.1.1
-scipy @ file:///C:/ci/scipy_1592916963468/work
+scipy
 six==1.15.0
-sqlparse @ file:///tmp/build/80754af9/sqlparse_1602184451250/work
-threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
-tqdm @ file:///tmp/build/80754af9/tqdm_1602185206534/work
+sqlparse
+threadpoolctl
+tqdm 
 wincertstore==0.2
